# bpxcel2pdf

./: CHANGELOG.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: carbon.css  carbon.scss  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: App.svelte
src/i18n/: en.json  fr.json
