[package]
name = "bpexcel2_pdf"
version = "1.1.1"
description = "Bonne Pioche Excel to Pdf"
authors = [ "dev@akylasfr" ]
license = "MIT"
repository = "https://github.com/Akylas/pbexcel2pdf"
default-run = "bpexcel2_pdf"
edition = "2018"
build = "src/build.rs"
include = [ "**/*.rs" ]

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
flate2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.4", features = ["dialog-open", "fs-read-file", "fs-write-file", "path-all", "protocol-asset", "shell-open", "window-print"] }
tauri-plugin-window-state = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
